--- a/architecture/refactoring_summary_3/index.html
+++ b/architecture/refactoring_summary_3/index.html
@@ -176,6 +176,11 @@
 <li><a href="">Replace Primitive with Object</a>를 이용하여 원시 타입을 의미있는 타입으로 변경할 수 있다. 만약 원시 타입이 분기문을 제어하는 역할을 한다면 <a href="">Replace Type Code with Subclasses</a>와 <a href="">Replace Conditional with Polymorphism</a>을 이용할 수 있다.</li>
 <li>같이 어울려 다니는 원시 타입들엔 <a href="">Extract Class</a>와 <a href="">Introduce Parameter Object</a>를 적용할 수 있다.</li>
 </ul>
+<h2 id="반복된-switch-문-repeated-switches" style="position:relative;"><a href="#%EB%B0%98%EB%B3%B5%EB%90%9C-switch-%EB%AC%B8-repeated-switches" aria-label="반복된 switch 문 repeated switches permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>반복된 Switch 문 (Repeated Switches)</h2>
+<ul>
+<li><code class="language-text">switch</code> 문을 중복해서 사용하는 경우, 하나의 케이스가 추가될 때 (중복된) 모든 <code class="language-text">switch</code> 문을 찾아 바꿔줘야 한다.</li>
+<li>이렇게 중복이 발생하고 있다면 <a href="">Replace Conditional with Polymorphism</a>을 이용하여 조건부 로직을 다형성 로직으로 바꿔보자.</li>
+</ul>
 <h2 id="루프문-loops" style="position:relative;"><a href="#%EB%A3%A8%ED%94%84%EB%AC%B8-loops" aria-label="루프문 loops permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>루프문 (Loops)</h2>
 <ul>
 <li><a href="">Replace Loop with Pipeline</a> 기법을 통해 루프문을 일급 함수로 변환하는 것을 추천한다. 우리의 경험으로 보자면 <code class="language-text">filter</code> 나 <code class="language-text">map</code> 같은 파이프라인 함수들을 통해 코드의 흐름을 더욱 쉽고 빠르게 파악할 수 있었다.</li>
