--- a/architecture/refactoring_summary_3/index.html
+++ b/architecture/refactoring_summary_3/index.html
@@ -88,7 +88,7 @@
 <ul>
 <li>코드 구조가 두 번 이상 반복된다면 하나로 합치는 것을 권장한다. 중복된 코드가 있다면 코드를 읽을 때도 무언가 차이가 있는지 면밀히 살펴봐야 하고, 중복된 코드를 수정하려고 하면 중복된 코드들 모두를 같이 바꿔주어야 한다.</li>
 <li>중복된 코드의 가장 단순한 예로는, 한 클래스에 존재하는 두 메소드가 같은 문장을 사용하는 경우이다. 이 경우 <a href="">Extract Function</a>를 써서 추출된 함수를 두 곳에서 호출하는 형태로 바꾸는 것이 좋다.</li>
-<li>만약 코드가 똑같진 않고 비슷하다면 <a href="">Slice Statements</a>를 이용하여 비슷한 부분을 하나로 묶을 수 있는지 살펴보는 것을 권장한다.</li>
+<li>만약 코드가 똑같진 않고 비슷하다면 <a href="">Slide Statements</a>를 이용하여 비슷한 부분을 하나로 묶을 수 있는지 살펴보는 것을 권장한다.</li>
 <li>공통 부모 클래스의 자식 클래스 내부에 중복되는 부분이 존재하는 경우엔 <a href="">Pull Up Method</a>를 적용할 수 있다.</li>
 </ul>
 <h2 id="긴-함수-long-function" style="position:relative;"><a href="#%EA%B8%B4-%ED%95%A8%EC%88%98-long-function" aria-label="긴 함수 long function permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>긴 함수 (Long Function)</h2>
