--- a/nginx/configure-nginx-on-ubuntu-2004/index.html
+++ b/nginx/configure-nginx-on-ubuntu-2004/index.html
@@ -80,7 +80,7 @@
   Nginx Full
   Nginx HTTP
   Nginx HTTPS
-  OpenSbash</code></pre></div>
+  OpenSSH</code></pre></div>
 <p>각 설정이 의미하는 바는 다음과 같습니다:</p>
 <ul>
 <li><strong>Nginx HTTP</strong>: 포트 80번만 허용</li>
