--- a/computer-architecture/computer-architecture-intro/index.html
+++ b/computer-architecture/computer-architecture-intro/index.html
@@ -72,7 +72,7 @@
 </ul>
 <p>즉, <code class="language-text">컴퓨터 구조</code>는 논리적인 내용과 관련되어 있고, <code class="language-text">컴퓨터 구성</code>은 하드웨어적인 내용과 관련 있다고 할 수 있습니다. 예를 들어 곱셈 연산에 대해 생각해볼 때, 구조적인 관점에서는 “instruction set에 곱셈 명령을 포함할 것인지?”에 대해 관심을 가지고, 구성적인 관점에서는 곱셈 명령을 구현할 때 덧셈을 반복해서 곱셈을 구현할지, 혹은 전용 곱셈 장치로 구현할지에 관해 관심을 가집니다.</p>
 <figure>
-    <img src="https://cdn.jsdelivr.net/gh/jaehyeon48/jaehyeon48.github.io@master/assets/images/computer-architecture/computer-architecture-intro/computer-architecture-vs-organization.png" alt="컴퓨터 구조 vs. 컴퓨터 구성">
+    <img src="https://cdn.jsdelivr.net/gh/jaehyeon48/jaehyeon48.github.io@main/assets/images/computer-architecture/computer-architecture-intro/computer-architecture-vs-organization.png" alt="컴퓨터 구조 vs. 컴퓨터 구성">
     <figcaption>컴퓨터 구조 vs. 컴퓨터 구성. 출처: https://www.geeksforgeeks.org/differences-between-computer-architecture-and-computer-organization/</figcaption>
 </figure>
 <p>이를 표로 정리해보면 다음과 같습니다:</p>
@@ -102,61 +102,56 @@
 <p>쉽게 말해, organization은 컴퓨터의 동작을 논리적으로 정의한 architecture를 구현한 것이라고 할 수 있는데, 이와 같이 논리적인 레벨을 다루는 architecture와, 하드웨어 레벨을 다루는 organization을 나눔으로써 architecture는 그대로 유지하되 시대에 따라 발전하는 하드웨어에 맞춰 이를 구현하는 organization을 변경하는 방식을 사용할 수 있습니다.</p>
 <h2 id="구조structure와-기능function" style="position:relative;"><a href="#%EA%B5%AC%EC%A1%B0structure%EC%99%80-%EA%B8%B0%EB%8A%A5function" aria-label="구조structure와 기능function permalink" class="anchor before"><svg aria-hidden="true" width="18" height="18" focusable="false" data-prefix="fas" data-icon="link" viewBox="0 0 512 512"><path fill="#05b166" d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"></path></svg></a>구조(Structure)와 기능(Function)</h2>
 <p>컴퓨터는 매우 복잡한 시스템이므로, 이를 제대로 이해하기 위해선 (다른 복잡한 시스템에도 존재하는) 계층적인 특성을 이해할 필요가 있습니다.</p>
-<p>어떤 복잡한 시스템을 설계할 땐 필수적으로 계층적인 특성(hierarchical nature)이 포함됩니다. 이를 통해 시스템 설계자는 복잡한 시스템 전체가 아니라 특정 레벨의 계층만 다루면 되므로 시스템을 관리하기가 수월합니다.</p>
+<p>어떤 복잡한 시스템을 설계할 땐 계층적인 특성(hierarchical nature)이 반드시 포함됩니다. 이를 통해 시스템 설계자는 복잡한 시스템 전체가 아니라 특정 레벨의 계층만 다루면 되므로 시스템을 관리하기가 수월합니다.</p>
 <p>각 계층은 여러 컴포넌트가 서로 의존하는 관계로 구성되는데, 각 계층의 동작은 바로 아래 계층의 단순화되고 추상화된 특성에 의존합니다.</p>
-<p>시스템 설계자는 각 계층마다 아래의 두 가지를 고려해야 합니다:</p>
+<p>시스템 설계자는 계층마다 아래의 두 가지를 고려해야 합니다:</p>
 <ul>
-<li><code class="language-text">기능(Function)</code>: 구조의 일부로서 각 개별 구성 요소의 동작을 의미합니다.</li>
-<li><code class="language-text">구조(Structure)</code>: 각 컴포넌트들이 서로 연관된 방식을 의미합니다.</li>
+<li><code class="language-text">기능(Function)</code>: 구조의 일부로서 개별 구성 요소의 동작을 의미합니다.</li>
+<li><code class="language-text">구조(Structure)</code>: 각 컴포넌트가 서로 연관된 방식을 의미합니다.</li>
 </ul>
 <h3 id="기능function" style="position:relative;"><a href="#%EA%B8%B0%EB%8A%A5function" aria-label="기능function permalink" class="anchor before"><svg aria-hidden="true" width="18" height="18" focusable="false" data-prefix="fas" data-icon="link" viewBox="0 0 512 512"><path fill="#05b166" d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"></path></svg></a>기능(Function)</h3>
 <p>컴퓨터의 기능과 구조는 사실 단순합니다. 일반적으로, 컴퓨터가 수행하는 기능을 크게 4가지로 분류할 수 있습니다:</p>
 <ul>
 <li><code class="language-text">데이터 처리(Data processing)</code>: 데이터의 형태가 무궁무진하고 이를 처리하는 방식도 다양하지만, 데이터를 처리하는 몇 가지 기본적인 방식만 살펴볼 예정입니다.</li>
 <li><code class="language-text">데이터 저장소(Data storage)</code>: 컴퓨터에는 어떤 연산을 실행하는 도중에 중간 결과물을 임시로 저장하는 저장소가 존재하고, 이러한 결과물을 장기적으로 저장하는 저장소 또한 존재합니다.</li>
-<li><code class="language-text">데이터 이동(Data movement)</code>: 컴퓨터의 동작 환경은 어떤 연산의 입력이 되는 장치와, 이 연산의 결과물을 출력하는 장치들로 구성됩니다. 이때 이와 같이 컴퓨터와 직접 연결된 <strong>주변 장치(peripheral)</strong>로 부터 데이터를 가져오거나 주변 장치로 데이터를 내보내는 작업을 <strong>I/O(Input/Output)</strong> 작업이라고 합니다. 만약 주변 장치가 아니라 네트워크등을 통해 멀리 떨어진 장치와 데이터를 주고 받는경우, 이를 <strong>데이터 통신(data communication)</strong>이라고 합니다.</li>
+<li><code class="language-text">데이터 이동(Data movement)</code>: 컴퓨터의 동작 환경은 어떤 연산의 입력이 되는 장치와 이 연산의 결과물을 출력하는 장치들로 구성됩니다. 이처럼 컴퓨터와 직접 연결된 <strong>주변 장치(peripheral)</strong>로 부터 데이터를 가져오거나 주변 장치로 데이터를 내보내는 작업을 <strong>I/O(Input/Output)</strong> 작업이라고 합니다. 만약 주변 장치가 아니라 네트워크 등을 통해 멀리 떨어진 장치와 데이터를 주고 받는 경우, 이를 <strong>데이터 통신(data communication)</strong>이라고 합니다.</li>
 <li><code class="language-text">제어(Control)</code>: 컴퓨터 내의 제어 장치는 컴퓨터의 자원을 관리하고, 명령어에 따라 각 자원들의 동작을 조정합니다.</li>
 </ul>
 <h3 id="structure" style="position:relative;"><a href="#structure" aria-label="structure permalink" class="anchor before"><svg aria-hidden="true" width="18" height="18" focusable="false" data-prefix="fas" data-icon="link" viewBox="0 0 512 512"><path fill="#05b166" d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"></path></svg></a>Structure</h3>
 <p>이제 일반적인 컴퓨터의 내부 구조를 살펴봅시다. 우선 싱글 프로세서부터 살펴보고 멀티코어로 넘어가겠습니다.</p>
 <figure>
-    <img src="https://cdn.jsdelivr.net/gh/jaehyeon48/jaehyeon48.github.io@master/assets/images/computer-architecture/computer-architecture-intro/computer-architecture-vs-organization.png" alt="일반적인 컴퓨터 구조">
-    <figcaption>일반적인 컴퓨터 구조. 출처: https://www.geeksforgeeks.org/differences-between-computer-architecture-and-computer-organization/</figcaption>
+    <img src="https://cdn.jsdelivr.net/gh/jaehyeon48/jaehyeon48.github.io@main/assets/images/computer-architecture/computer-architecture-intro/top-level-structure-of-computer.png" alt="일반적인 컴퓨터 구조">
+    <figcaption>일반적인 컴퓨터 구조. 출처: Computer Organization and Architecture 10th Edition</figcaption>
 </figure>
-<p>그림 1.1은 전통적인 싱글 프로세서 컴퓨터의 내부 구조를 보여준다. 여기에는 네 개의 주요 요소(component)가 존재한다:</p>
 <ul>
 <li>
-<p><strong>CPU</strong>는 컴퓨터의 동작을 제어(현재 상태값을 저장하고, 외부의 정보를 해석)하고, 데이터를 처리한다. 간단하게 <strong>프로세서</strong>라고 부르기도 한다. CPU의 주요 구조적 요소들은 다음과 같다:</p>
+<p><code class="language-text">CPU(Central Processing Unit)</code>: 컴퓨터의 동작을 제어(현재 상태값을 저장, 정보 해석)하고, 데이터를 처리하는 역할을 합니다. 간단히 <strong>프로세서(processor)</strong>라고도 부릅니다. CPU의 주요 구성 요소는 다음과 같습니다:</p>
 <ul>
-<li><strong>제어 유닛(Control unit</strong>)은 CPU의 동작 (더 나아가, 컴퓨터의 동작)을 제어한다.</li>
-<li><strong>산술 논리 장치(Arithmetic Logic Unit, ALU)</strong>는 데이터 처리 기능을 수행한다.</li>
-<li><strong>레지스터(Registers)</strong>는 CPU 내부의 기억 공간(즉, 메모리)을 제공한다.</li>
-<li><strong>CPU interconnection</strong>: control unit과 ALU, 레지스터 간의 소통 메커니즘이다.</li>
+<li><code class="language-text">제어 장치(Control unit)</code>: CPU의 동작을 제어합니다.</li>
+<li><code class="language-text">산술·논리 장치(Arithmetic Logic Unit, ALU)</code>: 말 그대로, 덧셈·뺄셈과 같은 산술 연산과 논리 연산(AND, OR, XOR, …)을 수행하는 장치입니다.</li>
+<li><code class="language-text">레지스터(Register)</code>: CPU 내에 존재하는 임시 저장장치로, 크기가 작지만 매우 빠릅니다.</li>
+<li><code class="language-text">CPU interconnection</code>: 제어 장치, ALU, 레지스터 간의 통신 메커니즘입니다.</li>
 </ul>
 </li>
-<li><strong>주기억장치(Main memory)</strong>: 데이터를 저장한다.</li>
-<li><strong>입출력장치(I/O)</strong>: 컴퓨터 간에 데이터를 이동시키거나, 외부 장치로 데이터를 이동시킨다.</li>
-<li><strong>System interconnection</strong>: CPU, 메모리, I/O 간의 소통 메커니즘이다. 대표적인 예로는 (전선으로 구성된) <strong>시스템 버스(system bus)</strong>가 있다.</li>
+<li><code class="language-text">주기억장치(Main memory)</code>: CPU가 접근하여 처리할 수 있는 기억 장치로, 데이터와 명령어가 저장됩니다. 흔히 <strong>RAM(Random Access Memory)</strong>라고 부릅니다.</li>
+<li><code class="language-text">입출력장치(I/O)</code>: 키보드, 마우스, 모니터 등 컴퓨터가 처리하기 위한 데이터를 읽고 그 결과물을 출력하는 장치들을 말합니다.</li>
+<li><code class="language-text">System interconnection</code>: CPU, 메인 메모리, I/O장치 간의 통신 메커니즘으로, (전선으로 구성된) <strong>시스템 버스(system bus)</strong>가 대표적인 예시입니다.</li>
 </ul>
-<p>현대 컴퓨터들의 특징 중 하나가 멀티 프로세서 (혹은 멀티코어)이고, 또 다른 특징 중 하나는 <strong>캐시 메모리(cache memory)</strong>라고 하는, CPU와 메인 메모리 사이에 존재하는 메모리를 사용하여 메모리 계층을 이룬다는 것이다. 이 캐시 메모리에 가까운 미래에 사용될 가능성이 높은 데이터들을 저장함으로써 컴퓨터 성능 향상을 꾀하는데, CPU에 (논리적으로) 가까울 수록 빠르고 용량이 작고, 멀수록 느리고 용량이 크다.</p>
-<p align="center">
-  <img src="https://cdn.jsdelivr.net/gh/jaehyeon48/jaehyeon48.github.io/assets/images/computer_architecture/fig1.2.png">
-</p>
-<p>그림 1.2는 멀티코어 컴퓨터의 주요 장치들을 보여준다. 임베디드 컴퓨터, 스마트폰, 태블릿 등을 포함한 컴퓨터들의 장치들은 <strong>마더보드</strong>에 들어있다 (housed). 이러한 구성들을 살펴보기 전에 몇가지 용어를 정의해보자:</p>
+<br />
+<p>현대 컴퓨터들의 특징 중 하나가 멀티 프로세서(즉, 멀티코어)이고, 또 다른 특징 중 하나는 <strong>캐시 메모리(cache memory)</strong>라고 하는 작고 빠른 메모리를 CPU와 메인 메모리 사이에 여러 개 두어 메모리 계층을 이룬다는 점입니다. 이 캐시 메모리에는 가까운 미래에 사용될 가능성이 높은 데이터들을 저장함으로써 컴퓨터 성능 향상을 꾀하는데, 이때 캐시 메모리가 CPU에 가까울수록 빠르고 용량이 작고, 멀수록 느리고 용량이 큽니다.</p>
+<figure>
+    <img src="https://cdn.jsdelivr.net/gh/jaehyeon48/jaehyeon48.github.io@main/assets/images/computer-architecture/computer-architecture-intro/major-elements-of-multicore-computer.png" alt="멀티코어 컴퓨터의 주요 구성 요소">
+    <figcaption>멀티코어 컴퓨터의 주요 구성 요소. 출처: Computer Organization and Architecture 10th Edition</figcaption>
+</figure>
+<p>위 그림에서 볼 수 있듯이, 임베디드 컴퓨터, 스마트폰, 태블릿 등을 포함한 대부분의 컴퓨터 장치들은 <strong>마더보드(Motherboard)</strong>에 들어있습니다. 이러한 구성을 살펴보기 전에 몇 가지 용어를 살펴보겠습니다:</p>
 <ul>
-<li><strong>인쇄 회로 기판(Printed circuit board, PCB)</strong>: 집적 회로, 스위치 등의 전기적 부품들이 납땜되는 얇은 판. 흔히 생각하는 초록색깔 판이다.</li>
-<li><strong>마더보드(Motherboard)</strong>: 컴퓨터의 PCB들 중에서 메인 PCB이다.</li>
-<li><strong>확장 보드(expansion board)</strong>: 컴퓨터 시스템에 기능을 추가할 목적으로 확장 슬롯에 꽂는 PCB.</li>
-<li><strong>Chip</strong>: 주로 실리콘으로 만들어져 전자 회로와 논리 게이트들이 집적되는 반도체. 이 결과물을 집적 회로 (integrated circuit) 이라고 한다.</li>
+<li><code class="language-text">인쇄 회로 기판(Printed circuit board, PCB)</code>: 집적 회로, 스위치 등의 전기적 부품들이 납땜 되는 얇은 판으로, 흔히 생각하는 초록색 판입니다.</li>
+<li><code class="language-text">마더보드(Motherboard)</code>: 컴퓨터에 있는 PCB들 중에서 메인 PCB를 가리킵니다.</li>
+<li><code class="language-text">확장 보드(expansion board)</code>: 컴퓨터 시스템에 기능을 추가할 목적으로 확장 슬롯에 꽂는 PCB를 가리킵니다.</li>
+<li><code class="language-text">Chip</code>: 주로 실리콘으로 만들어져 전자 회로와 논리 게이트들이 집적되는 반도체로, 이 결과물을 <strong>집적 회로(Integrated Circuit, IC)</strong>라고 합니다.</li>
 </ul>
-<p>마더보드는 프로세서를 위한 슬롯 (혹은 소켓), 메모리를 위한 슬롯, I/O 컨트롤러 칩, 그리고 다른 주요 컴퓨터 하드웨어 요소들로 이루어져 있다.</p>
-<p>다음으로, 하나의 코어에 대해 살펴보자. 한 코어의 기능적인 요소들은 다음과 같다:</p>
-<ul>
-<li><strong>명령 로직(Instruction logic)</strong>에는 명령을 가져오기 위한(fetching instructions) 작업들, 그리고 가져온 명령들을 해석하기 위한 작업들이 포함된다.</li>
-<li><strong>ALU</strong>는 명령에 의한 동작들을 수행한다.</li>
-<li><strong>Load/store logic</strong> 캐시를 통한 데이터 전송을 관리한다.</li>
-</ul>
+<p>마더보드는 프로세서를 위한 슬롯(혹은 소켓), 메모리를 위한 슬롯, I/O 컨트롤러 칩, 그리고 다른 주요 컴퓨터 하드웨어 요소들로 이루어져 있습니다.</p>
 <h2 id="레퍼런스" style="position:relative;"><a href="#%EB%A0%88%ED%8D%BC%EB%9F%B0%EC%8A%A4" aria-label="레퍼런스 permalink" class="anchor before"><svg aria-hidden="true" width="18" height="18" focusable="false" data-prefix="fas" data-icon="link" viewBox="0 0 512 512"><path fill="#05b166" d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"></path></svg></a>레퍼런스</h2>
 <ul>
-<li><a href=""></a></li>
+<li><a href="https://www.amazon.com/Computer-Organization-Architecture-William-Stallings/dp/0134101618/ref=sr_1_3?crid=254TMAUZ6SF0Z&#x26;keywords=Computer+Organization+and+Architecture&#x26;qid=1655859599&#x26;s=books&#x26;sprefix=computer+organization+and+architecture%2Cstripbooks-intl-ship%2C242&#x26;sr=1-3" target="_blank" rel="noreferrer noopener">Computer Organization and Architecture 10th Edition</a></li>
 </ul></div><hr class="custom-hr"/><ul class="navigator"><li><a rel="prev" href="/os/ipc/">← <!-- -->프로세스간 통신, IPC</a></li><li><a rel="next" href="/web/cors-on-local-environment/">로컬 환경에서의 CORS 문제 해결<!-- --> →</a></li></ul><div class="utterances"></div></div></main><footer class="footer">©Jaehyeon Kim, Built with<!-- --> <a href="https://github.com/JaeYeopHan/gatsby-starter-bee">Gatsby-starter-bee</a> <!-- -->by<!-- --> <a href="https://github.com/JaeYeopHan">Jbee</a><div class="footer-socials"><a href="https://github.com/jaehyeon48" aria-label="GitHub" target="_blank" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" role="img" viewBox="0 0 496 512" class="github github--dark-theme"><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg></a></div></footer></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/computer-architecture/computer-architecture-intro/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-a0c75589a40cac95b858.js"],"app":["/app-25b00cc8eda127a9c48e.js"],"component---node-modules-gatsby-plugin-offline-app-shell-js":["/component---node-modules-gatsby-plugin-offline-app-shell-js-36dc033f967ae9fe9cda.js"],"component---src-pages-404-js":["/component---src-pages-404-js-a17474ea90eca4f76f17.js"],"component---src-pages-about-js":["/component---src-pages-about-js-aa866f316e29cf35830f.js"],"component---src-pages-index-js":["/component---src-pages-index-js-5fe387575552f1e22954.js"],"component---src-templates-blog-post-js":["/component---src-templates-blog-post-js-09e7b08eb4a4e8841b2c.js"]};/*]]>*/</script><script src="/polyfill-a0c75589a40cac95b858.js" nomodule=""></script><script src="/component---src-templates-blog-post-js-09e7b08eb4a4e8841b2c.js" async=""></script><script src="/d5d7a013bc6c1e2b6d7db819052c16d7efea5559-a6baffdbf73497fae040.js" async=""></script><script src="/styles-407fe62976dc5310c43e.js" async=""></script><script src="/app-25b00cc8eda127a9c48e.js" async=""></script><script src="/framework-6c3ead24af170cdcb87c.js" async=""></script><script src="/webpack-runtime-153d45b4ca10116e8ac9.js" async=""></script></body></html>
